<resources>
    <string name="app_name">Weather - Little App</string>

    //Theme
    <string name="basic_theme">Basic Theme</string>
    <string name="sec_theme">Sec Theme</string>

    <string name="date_weather">23/07/2022</string>
    <string name="city_weather">Chicago</string>
    <string name="c_weather">23°C</string>
    <string name="c_c_weather">34°C/23°C</string>
    <string name="status_weather">Sunny</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="day_weather">Monday 23/07/2022</string>
    <string name="empty">Empty</string>
    <string name="temperature_max_min_format">%1$s°C / %2$s°C</string>
    <string name="temperature_current_format">%1$s°C</string>
    <string name="search">Search</string>
    <string name="sync">Sync</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="city_name_hint">City name:</string>
    <string name="search_hint">Search&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
</resources>